--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:dev": "jest --watchAll",
     "prepare": "husky install"
   },
   "keywords": [],
